--- a/app/src/main/res/screens/authentication/layout/fragment_sign_in.xml
+++ b/app/src/main/res/screens/authentication/layout/fragment_sign_in.xml
@@ -6,9 +6,6 @@
         <variable
             name="signInFragment"
             type="com.veldan.askword_us.authentication.sign_in.SignInFragment" />
-        <variable
-            name="signInWithGoogle"
-            type="com.veldan.askword_us.authentication.sign_in.SignInWithGoogleViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -25,7 +22,7 @@
             android:text="G"
             android:textColor="#62FF00"
             android:textSize="50sp"
-            android:onClick="@{() -> signInWithGoogle.signInWithGoogle()}"
+            android:onClick="@{() -> signInFragment.signInWithGoogle()}"
             app:layout_constraintEnd_toStartOf="@+id/btn_sign_in_with_facebook"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintHorizontal_chainStyle="spread"
