--- a/app/src/main/res/screens/authentication/layout/fragment_registration.xml
+++ b/app/src/main/res/screens/authentication/layout/fragment_registration.xml
@@ -15,6 +15,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layout_registration"
         clickHideKeyboard="@{true}"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -24,6 +25,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@color/colorShine"
+            android:onClick="@{() -> registrationFragment.registrationWithGoogle()}"
             android:text="G"
             android:textColor="#62FF00"
             android:textSize="50sp"
@@ -153,6 +155,12 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintWidth_percent="0.5"
             app:lottie_loop="true" />
+
+        <androidx.constraintlayout.widget.Group
+            android:id="@+id/group_registration"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:constraint_referenced_ids="edit_name, edit_surname, edit_email, edit_password, ib_done" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
