--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation"
-    app:startDestination="@id/authenticationFragment">
+    app:startDestination="@id/startFragment">
 
     <fragment
         android:id="@+id/startFragment"
@@ -11,8 +11,21 @@
         android:label="StartFragment"
         tools:layout="@layout/fragment_start">
         <action
-            android:id="@+id/action_startFragment_to_dictionaryFragment"
-            app:destination="@id/dictionaryFragment" />
+            android:id="@+id/action_startFragment_to_authenticationFragment"
+            app:destination="@id/authentication"
+            app:popUpTo="@id/startFragment"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_startFragment_to_dictionaryOrStudyFragment"
+            app:destination="@id/dictionaryOrStudyFragment"
+            app:popUpTo="@id/startFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/dictionaryOrStudyFragment"
+        android:name="com.veldan.askword_us.dictionary_or_study.DictionaryOrStudyFragment"
+        android:label="DictionaryOrStudyFragment"
+        tools:layout="@layout/fragment_dictionary_or_study">
         <argument
             android:name="userName"
             app:argType="string" />
@@ -22,43 +35,76 @@
         <argument
             android:name="userEmail"
             app:argType="string" />
+        <action
+            android:id="@+id/action_dictionaryOrStudyFragment_to_dictionaryFragment"
+            app:destination="@id/dictionaryFragment" />
     </fragment>
     <fragment
         android:id="@+id/dictionaryFragment"
         android:name="com.veldan.askword_us.dictionary.DictionaryFragment"
         android:label="DictionaryFragment"
         tools:layout="@layout/fragment_dictionary" />
-    <fragment
-        android:id="@+id/authenticationFragment"
-        android:name="com.veldan.askword_us.authentication.AuthenticationFragment"
-        android:label="AuthenticationFragment"
-        tools:layout="@layout/fragment_authentication">
-        <action
-            android:id="@+id/action_authenticationFragment_to_registrationFragment"
-            app:destination="@id/registrationFragment" />
-        <action
-            android:id="@+id/action_authenticationFragment_to_signInFragment"
-            app:destination="@id/signInFragment" />
-        <action
-            android:id="@+id/action_authenticationFragment_to_startFragment"
-            app:destination="@id/startFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/registrationFragment"
-        android:name="com.veldan.askword_us.authentication.registration.RegistrationFragment"
-        android:label="RegistrationFragment"
-        tools:layout="@layout/fragment_registration">
-        <action
-            android:id="@+id/action_registrationFragment_to_startFragment"
-            app:destination="@id/startFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/signInFragment"
-        android:name="com.veldan.askword_us.authentication.sign_in.SignInFragment"
-        android:label="SignInFragment"
-        tools:layout="@layout/fragment_sign_in" >
-        <action
-            android:id="@+id/action_signInFragment_to_startFragment"
-            app:destination="@id/startFragment" />
-    </fragment>
+    <navigation android:id="@+id/authentication"
+        app:startDestination="@id/authenticationFragment">
+        <fragment
+            android:id="@+id/authenticationFragment"
+            android:name="com.veldan.askword_us.authentication.AuthenticationFragment"
+            android:label="AuthenticationFragment"
+            tools:layout="@layout/fragment_authentication" >
+            <action
+                android:id="@+id/action_authenticationFragment_to_signInFragment"
+                app:destination="@id/signInFragment" />
+            <action
+                android:id="@+id/action_authenticationFragment_to_registrationFragment"
+                app:destination="@id/registrationFragment" />
+            <action
+                android:id="@+id/action_authenticationFragment_to_dictionaryOrStudyFragment"
+                app:destination="@id/dictionaryOrStudyFragment" />
+        </fragment>
+        <fragment
+            android:id="@+id/registrationFragment"
+            android:name="com.veldan.askword_us.authentication.registration.RegistrationFragment"
+            android:label="RegistrationFragment"
+            tools:layout="@layout/fragment_registration">
+            <action
+                android:id="@+id/action_registrationFragment_to_dictionaryOrStudyFragment"
+                app:destination="@id/dictionaryOrStudyFragment"
+                app:popUpTo="@id/authenticationFragment"
+                app:popUpToInclusive="true" />
+        </fragment>
+        <fragment
+            android:id="@+id/signInFragment"
+            android:name="com.veldan.askword_us.authentication.sign_in.SignInFragment"
+            android:label="SignInFragment"
+            tools:layout="@layout/fragment_sign_in">
+            <action
+                android:id="@+id/action_signInFragment_to_dictionaryOrStudyFragment"
+                app:destination="@id/dictionaryOrStudyFragment"
+                app:popUpTo="@id/authenticationFragment"
+                app:popUpToInclusive="true" />
+        </fragment>
+        <fragment
+            android:id="@+id/dictionaryOrStudyFragment"
+            android:name="com.veldan.askword_us.dictionary_or_study.DictionaryOrStudyFragment"
+            android:label="DictionaryOrStudyFragment"
+            tools:layout="@layout/fragment_dictionary_or_study">
+            <action
+                android:id="@+id/action_dictionaryOrStudyFragment_to_dictionaryFragment"
+                app:destination="@id/dictionaryFragment" />
+            <argument
+                android:name="userName"
+                app:argType="string" />
+            <argument
+                android:name="userSurname"
+                app:argType="string" />
+            <argument
+                android:name="userEmail"
+                app:argType="string" />
+        </fragment>
+        <fragment
+            android:id="@+id/dictionaryFragment"
+            android:name="com.veldan.askword_us.dictionary.DictionaryFragment"
+            android:label="DictionaryFragment"
+            tools:layout="@layout/fragment_dictionary"/>
+    </navigation>
 </navigation>
