--- a/app/src/main/res/screens/dictionary_or_study/include_components/layout/layout_account.xml
+++ b/app/src/main/res/screens/dictionary_or_study/include_components/layout/layout_account.xml
@@ -3,6 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <variable
+            name="dictionaryOrStudyFragment"
+            type="com.veldan.askword_us.dictionary_or_study.DictionaryOrStudyFragment" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -41,6 +47,7 @@
             android:layout_margin="10dp"
             android:textSize="10sp"
             android:text="Сменить акаунт"
+            android:onClick="@{() -> dictionaryOrStudyFragment.transitionToAuthentication()}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
