--- a/app/src/main/res/screens/dictionary/include_components/layout/layout_words_creation.xml
+++ b/app/src/main/res/screens/dictionary/include_components/layout/layout_words_creation.xml
@@ -16,6 +16,8 @@
             android:layout_height="0dp"
             android:layout_marginVertical="@dimen/words_creation_ib_margin"
             android:background="@drawable/image_add_state"
+            android:clickable="true"
+            android:focusable="true"
             android:scaleType="centerCrop"
             app:layout_constraintBottom_toTopOf="@id/guideH_25"
             app:layout_constraintDimensionRatio="1:1"
@@ -71,6 +73,19 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/guideH_40" />
+
+        <ImageButton
+            android:id="@+id/btn_additional_translation"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:src="@drawable/ic_add"
+            android:scaleType="centerCrop"
+            android:gravity="center"
+            android:textSize="50sp"
+            app:layout_constraintEnd_toEndOf="@+id/edit_translation"
+            app:layout_constraintHeight_percent="0.1"
+            app:layout_constraintTop_toBottomOf="@+id/edit_translation"
+            app:layout_constraintDimensionRatio="1:1" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideH_55"
