--- a/app/src/main/res/screens/dictionary/include_components/layout/layout_word_creation.xml
+++ b/app/src/main/res/screens/dictionary/include_components/layout/layout_word_creation.xml
@@ -46,8 +46,8 @@
             android:singleLine="true"
             android:textSize="@dimen/edit_text_size"
             app:layout_constraintBottom_toTopOf="@id/guideH_40"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/guideV_85"
+            app:layout_constraintStart_toEndOf="@+id/guideV_15"
             app:layout_constraintTop_toBottomOf="@id/guideH_25" />
 
         <androidx.constraintlayout.widget.Guideline
@@ -57,35 +57,53 @@
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.4" />
 
+        <ImageView
+            android:id="@+id/iv_list_additional_translation"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_margin="@dimen/words_creation_edit_margin"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_list"
+            app:layout_constraintBottom_toTopOf="@+id/guideH_55"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintEnd_toStartOf="@+id/guideV_15"
+            app:layout_constraintHeight_percent="0.07"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/guideH_40" />
+
         <EditText
             android:id="@+id/edit_translation"
             focusAfterClickKeyDone="@{false}"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/words_creation_edit_margin"
             android:gravity="center"
             android:hint="@string/word_creation_edit_enter_translation"
             android:imeOptions="actionDone"
             android:inputType="textCapSentences"
             android:singleLine="true"
-            android:textSize="@dimen/edit_text_size"
-            app:layout_constraintBottom_toTopOf="@id/guideH_55"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/guideH_40" />
+            android:textSize="@dimen/edit_text_size" />
+
+        <TextView
+            android:id="@+id/tv_translation"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:gravity="center"
+            android:singleLine="true"
+            android:textSize="@dimen/edit_text_size" />
 
         <ImageButton
             android:id="@+id/btn_additional_translation"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:src="@drawable/ic_add"
+            android:layout_margin="@dimen/words_creation_edit_margin"
             android:scaleType="centerCrop"
-            android:gravity="center"
-            android:textSize="50sp"
-            app:layout_constraintEnd_toEndOf="@+id/edit_translation"
-            app:layout_constraintHeight_percent="0.1"
-            app:layout_constraintTop_toBottomOf="@+id/edit_translation"
-            app:layout_constraintDimensionRatio="1:1" />
+            android:src="@drawable/ic_add"
+            app:layout_constraintBottom_toTopOf="@+id/guideH_55"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHeight_percent="0.07"
+            app:layout_constraintStart_toEndOf="@+id/guideV_85"
+            app:layout_constraintTop_toBottomOf="@+id/guideH_40" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideH_55"
@@ -95,18 +113,18 @@
             app:layout_constraintGuide_percent="0.55" />
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideV_40"
+            android:id="@+id/guideV_15"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.4" />
+            app:layout_constraintGuide_percent="0.15" />
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideV_60"
+            android:id="@+id/guideV_85"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.6" />
+            app:layout_constraintGuide_percent="0.85" />
 
         <androidx.constraintlayout.utils.widget.ImageFilterView
             android:id="@+id/ifv_prompt_add"
