--- a/app/src/main/res/screens/dictionary/include_components/layout/layout_word_creation.xml
+++ b/app/src/main/res/screens/dictionary/include_components/layout/layout_word_creation.xml
@@ -11,7 +11,7 @@
         app:layoutDescription="@xml/words_creation_scene">
 
         <ImageView
-            android:id="@+id/img_img_add"
+            android:id="@+id/iv_img_add"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginVertical="@dimen/words_creation_ib_margin"
@@ -70,6 +70,10 @@
             app:layout_constraintHeight_percent="0.07"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/guideH_40" />
+
+        <include
+            android:id="@+id/layout_additional_translation"
+            layout="@layout/layout_additional_translation"/>
 
         <EditText
             android:id="@+id/edit_translation"
