--- a/app/src/main/res/screens/dictionary/layout/fragment_dictionary_set_5.xml
+++ b/app/src/main/res/screens/dictionary/layout/fragment_dictionary_set_5.xml
@@ -2,6 +2,7 @@
 
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/motion_dictionary"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -38,10 +39,10 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@drawable/fab_state"
-        android:elevation="@dimen/dictionary_fab_elevation"
         android:rotation="405"
         android:scaleType="centerCrop"
         android:src="@drawable/ic_add"
+        android:visibility="invisible"
         app:altSrc="@drawable/ic_check"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1:1"
@@ -65,12 +66,13 @@
         android:scaleType="centerCrop"
         android:src="@drawable/ic_category_add"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@id/fab_add"
+        app:layout_constraintBottom_toBottomOf="@+id/fab_add"
         app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintEnd_toEndOf="@id/fab_add"
-        app:layout_constraintStart_toStartOf="@id/fab_add"
-        app:layout_constraintTop_toTopOf="@id/fab_add"
-        app:layout_constraintWidth_percent="0.15" />
+        app:layout_constraintEnd_toEndOf="@+id/fab_add"
+        app:layout_constraintStart_toStartOf="@+id/fab_add"
+        app:layout_constraintTop_toTopOf="@+id/fab_add"
+        app:layout_constraintWidth_percent="0.15"
+        tools:ignore="MissingConstraints" />
 
     <!--==============================
                   Fab photo
@@ -86,12 +88,13 @@
         android:scaleType="centerCrop"
         android:src="@drawable/ic_photo_add"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@id/fab_add"
+        app:layout_constraintBottom_toBottomOf="@+id/fab_add"
         app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintEnd_toEndOf="@id/fab_add"
-        app:layout_constraintStart_toStartOf="@id/fab_add"
-        app:layout_constraintTop_toTopOf="@id/fab_add"
-        app:layout_constraintWidth_percent="0.15" />
+        app:layout_constraintEnd_toEndOf="@+id/fab_add"
+        app:layout_constraintStart_toStartOf="@+id/fab_add"
+        app:layout_constraintTop_toTopOf="@+id/fab_add"
+        app:layout_constraintWidth_percent="0.15"
+        tools:ignore="MissingConstraints" />
 
     <!--==============================
                   Fab file
@@ -102,16 +105,17 @@
         android:layout_height="0dp"
         android:background="@drawable/fab_state"
         android:clickable="true"
+        android:elevation="@dimen/dictionary_fab_elevation"
         android:focusable="true"
         android:padding="@dimen/dictionary_fab_padding"
         android:scaleType="centerCrop"
         android:src="@drawable/ic_file_add"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@id/fab_add"
+        app:layout_constraintBottom_toBottomOf="@+id/fab_add"
         app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintEnd_toEndOf="@id/fab_add"
-        app:layout_constraintStart_toStartOf="@id/fab_add"
-        app:layout_constraintTop_toTopOf="@id/fab_add"
-        app:layout_constraintWidth_percent="0.15" />
+        app:layout_constraintEnd_toEndOf="@+id/fab_add"
+        app:layout_constraintStart_toStartOf="@+id/fab_add"
+        app:layout_constraintTop_toTopOf="@+id/fab_add"
+        app:layout_constraintWidth_percent="0.15"
+        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
