Dictionary layout_word_creation.xml and layout_prompt.xml Animation

--- a/app/src/main/res/screens/dictionary/include_components/include_components/layout/layout_prompt.xml
+++ b/app/src/main/res/screens/dictionary/include_components/include_components/layout/layout_prompt.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -10,13 +9,11 @@
 
         <EditText
             android:id="@+id/edit_prompt"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/prompt_edit_enter_prompt"
             android:inputType="textCapSentences|textMultiLine"
             android:textSize="@dimen/edit_text_size"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             tools:ignore="MissingConstraints" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
