--- a/app/src/main/res/screens/dictionary/include_components/layout/layout_word_creation_set_2.xml
+++ b/app/src/main/res/screens/dictionary/include_components/layout/layout_word_creation_set_2.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <androidx.constraintlayout.motion.widget.MotionLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/motion_word_creation"
         clickHideKeyboard="@{true}"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layoutDescription="@xml/word_creation_scene">
+        android:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/iv_img_add"
@@ -17,6 +17,7 @@
             android:focusable="true"
             android:scaleType="centerCrop"
             android:src="@drawable/image_add_state"
+            android:visibility="invisible"
             app:layout_constraintBottom_toTopOf="@+id/guideH_25"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toStartOf="@+id/guideV_85"
@@ -64,6 +65,7 @@
             android:nextFocusForward="@id/edit_translation"
             android:singleLine="true"
             android:textSize="@dimen/edit_text_size"
+            android:visibility="invisible"
             app:layout_constraintBottom_toTopOf="@+id/guideH_40"
             app:layout_constraintEnd_toStartOf="@+id/guideV_85"
             app:layout_constraintStart_toEndOf="@+id/guideV_15"
@@ -88,6 +90,7 @@
             android:inputType="textCapSentences"
             android:singleLine="true"
             android:textSize="@dimen/edit_text_size"
+            android:visibility="invisible"
             app:layout_constraintBottom_toTopOf="@+id/guideH_55"
             app:layout_constraintEnd_toStartOf="@+id/guideV_85"
             app:layout_constraintStart_toEndOf="@+id/guideV_15"
@@ -100,6 +103,7 @@
             android:layout_margin="@dimen/words_creation_edit_margin"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_list"
+            android:visibility="invisible"
             app:layout_constraintBottom_toTopOf="@+id/guideH_55"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toStartOf="@+id/guideV_15"
@@ -115,6 +119,7 @@
             android:layout_margin="@dimen/words_creation_edit_margin"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_add"
+            android:visibility="invisible"
             app:layout_constraintBottom_toTopOf="@+id/guideH_55"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toEndOf="parent"
@@ -133,33 +138,28 @@
             android:id="@+id/ifv_prompt_add"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:rotation="180"
+            android:rotationY="360"
             android:src="@drawable/ic_prompt_add"
+            android:translationY="-25dp"
             app:altSrc="@drawable/ic_prompt_add_shine"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toStartOf="@+id/guideV_85"
             app:layout_constraintStart_toEndOf="@+id/guideV_15"
-            app:layout_constraintTop_toBottomOf="@+id/guideH_55"
-            app:layout_constraintWidth_percent="0.2" />
-
-        <View
-            android:id="@+id/view"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            app:layout_constraintEnd_toStartOf="parent"
-            app:layout_constraintWidth_percent="0.999" />
-
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent="0.2"
+            tools:src="@drawable/ic_prompt_add_shine" />
 
         <include
             android:id="@+id/layout_prompt"
             layout="@layout/layout_prompt"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:visibility="invisible"
+            android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/guideH_15"
-            app:layout_constraintWidth_percent="0.999" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/guideH_15"
+            app:layout_constraintStart_toStartOf="parent" />
 
-    </androidx.constraintlayout.motion.widget.MotionLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
