Dictionary layout_word_creation.xml and additional_translation Animation

--- a/app/src/main/res/screens/dictionary/include_components/include_components/layout/layout_additional_translation.xml
+++ b/app/src/main/res/screens/dictionary/include_components/include_components/layout/layout_additional_translation.xml
@@ -6,11 +6,9 @@
         android:layout_height="match_parent"
         android:background="@color/colorWhite">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/container_additional_translation"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"/>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 </layout>
