--- a/app/src/main/res/screens/dictionary/include_components/layout/layout_word_creation_set_1.xml
+++ b/app/src/main/res/screens/dictionary/include_components/layout/layout_word_creation_set_1.xml
@@ -8,21 +8,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/iv_img_add"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:scaleType="centerCrop"
-            android:src="@drawable/image_add_state"
-            android:visibility="invisible"
-            app:layout_constraintBottom_toTopOf="@+id/guideH_25"
-            app:layout_constraintDimensionRatio="1:1"
-            app:layout_constraintEnd_toStartOf="@+id/guideV_85"
-            app:layout_constraintStart_toEndOf="@+id/guideV_15"
-            app:layout_constraintTop_toTopOf="parent" />
-
+        <!--==============================
+                  Guide horizontal
+        ==============================-->
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideH_15"
             android:layout_width="wrap_content"
@@ -38,6 +26,23 @@
             app:layout_constraintGuide_percent="0.25" />
 
         <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideH_40"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.4" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideH_55"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.55" />
+
+        <!--==============================
+                  Guide vertical
+        ==============================-->
+        <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideV_15"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -51,6 +56,27 @@
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.85" />
 
+        <!--==============================
+                     Image add
+        ==============================-->
+        <ImageView
+            android:id="@+id/iv_img_add"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:scaleType="centerCrop"
+            android:src="@drawable/image_add_state"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toTopOf="@+id/guideH_25"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintEnd_toStartOf="@+id/guideV_85"
+            app:layout_constraintStart_toEndOf="@+id/guideV_15"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <!--==============================
+                  Edit word
+        ==============================-->
         <EditText
             android:id="@+id/edit_word"
             android:layout_width="0dp"
@@ -70,13 +96,9 @@
             app:layout_constraintStart_toEndOf="@+id/guideV_15"
             app:layout_constraintTop_toBottomOf="@+id/guideH_25" />
 
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideH_40"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.4" />
-
+        <!--==============================
+                  Edit translation
+        ==============================-->
         <EditText
             android:id="@+id/edit_translation"
             focusAfterClickKeyDone="@{false}"
@@ -95,13 +117,16 @@
             app:layout_constraintStart_toEndOf="@+id/guideV_15"
             app:layout_constraintTop_toBottomOf="@+id/guideH_40" />
 
+        <!--==============================
+                ImageFilter list additional translation
+        ==============================-->
         <ImageView
             android:id="@+id/iv_list_additional_translation"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_margin="@dimen/words_creation_edit_margin"
             android:scaleType="centerCrop"
-            android:src="@drawable/ic_list"
+            android:src="@drawable/ic_list_black"
             android:visibility="invisible"
             app:layout_constraintBottom_toTopOf="@+id/guideH_55"
             app:layout_constraintDimensionRatio="1:1"
@@ -110,7 +135,9 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/guideH_40" />
 
-
+        <!--==============================
+                ImageButton additional translation
+        ==============================-->
         <ImageButton
             android:id="@+id/btn_additional_translation"
             android:layout_width="0dp"
@@ -126,13 +153,9 @@
             app:layout_constraintStart_toEndOf="@+id/guideV_85"
             app:layout_constraintTop_toBottomOf="@+id/guideH_40" />
 
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideH_55"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.55" />
-
+        <!--==============================
+              ImageFilter prompt add
+        ==============================-->
         <androidx.constraintlayout.utils.widget.ImageFilterView
             android:id="@+id/ifv_prompt_add"
             android:layout_width="0dp"
@@ -146,16 +169,19 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintWidth_percent="0.2" />
 
+        <!--==============================
+                    Layout prompt
+        ==============================-->
         <include
             android:id="@+id/layout_prompt"
             layout="@layout/layout_prompt"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:visibility="invisible"
-            app:layout_constraintWidth_percent="0.999"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/guideH_15" />
+            app:layout_constraintTop_toBottomOf="@+id/guideH_15"
+            app:layout_constraintWidth_percent="0.999" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
