--- a/app/src/main/res/screens/dictionary/include_components/include_components/layout/layout_additional_translation.xml
+++ b/app/src/main/res/screens/dictionary/include_components/include_components/layout/layout_additional_translation.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/colorWhite">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/layout_additional_translation"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/colorFogging">
 
-    </ScrollView>
-</layout>
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideV_80"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.8" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
