--- a/app/src/main/res/screens/dictionary/include_components/layout/layout_word_creation_set_4.xml
+++ b/app/src/main/res/screens/dictionary/include_components/layout/layout_word_creation_set_4.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.constraintlayout.motion.widget.MotionLayout
         android:id="@+id/motion_word_creation"
         clickHideKeyboard="@{true}"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layoutDescription="@xml/word_creation_scene">
 
         <!--==============================
                   Guide horizontal
@@ -119,16 +119,32 @@
             app:layout_constraintTop_toBottomOf="@+id/guideH_40" />
 
         <!--==============================
+                  Text translation
+        ==============================-->
+        <TextView
+            android:id="@+id/tv_translation"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_margin="@dimen/words_creation_edit_margin"
+            android:gravity="center"
+            android:lines="1"
+            android:textSize="@dimen/edit_text_size"
+            app:layout_constraintBottom_toBottomOf="@+id/edit_translation"
+            app:layout_constraintEnd_toEndOf="@+id/edit_translation"
+            app:layout_constraintStart_toStartOf="@+id/edit_translation"
+            app:layout_constraintTop_toTopOf="@+id/edit_translation" />
+
+        <!--==============================
                 ImageFilter list additional translation
         ==============================-->
-        <ImageView
+        <androidx.constraintlayout.utils.widget.ImageFilterView
             android:id="@+id/ifv_list_additional_translation"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_margin="@dimen/words_creation_edit_margin"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_list_black"
-            android:visibility="invisible"
+            app:altSrc="@drawable/ic_list_blue"
             app:layout_constraintBottom_toTopOf="@+id/guideH_55"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toStartOf="@+id/guideV_15"
@@ -140,7 +156,7 @@
                 ImageButton additional translation
         ==============================-->
         <ImageButton
-            android:id="@+id/btn_additional_translation"
+            android:id="@+id/ib_additional_translation"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_margin="@dimen/words_creation_edit_margin"
@@ -161,17 +177,15 @@
             android:id="@+id/ifv_prompt_add"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:rotation="180"
-            android:rotationY="360"
             android:src="@drawable/ic_prompt_add"
-            android:translationY="-25dp"
+            android:visibility="invisible"
             app:altSrc="@drawable/ic_prompt_add_shine"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toStartOf="@+id/guideV_85"
             app:layout_constraintStart_toEndOf="@+id/guideV_15"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintWidth_percent="0.2"
-            tools:src="@drawable/ic_prompt_add_shine" />
+            app:layout_constraintTop_toBottomOf="@+id/guideH_55"
+            app:layout_constraintWidth_percent="0.2" />
 
         <!--==============================
                     Layout prompt
@@ -181,11 +195,25 @@
             layout="@layout/layout_prompt"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:visibility="visible"
+            android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/guideH_15" />
+            app:layout_constraintEnd_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/guideH_15"
+            app:layout_constraintWidth_percent="0.999" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        <!--==============================
+                Layout additional translation
+        ==============================-->
+        <include
+            android:id="@+id/layout_additional_translation"
+            layout="@layout/layout_additional_translation"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="@+id/ifv_prompt_add"
+            app:layout_constraintEnd_toStartOf="@+id/guideV_85"
+            app:layout_constraintStart_toEndOf="@+id/guideV_15"
+            app:layout_constraintTop_toBottomOf="@+id/guideH_40" />
+
+    </androidx.constraintlayout.motion.widget.MotionLayout>
 </layout>
