--- a/app/src/main/res/screens/dictionary/include_components/layout/layout_word_creation_start.xml
+++ b/app/src/main/res/screens/dictionary/include_components/layout/layout_word_creation_start.xml
@@ -196,5 +196,19 @@
             app:layout_constraintTop_toBottomOf="@id/guideH_15"
             app:layout_constraintWidth_percent="0.999" />
 
+        <!--==============================
+                Layout additional translation
+        ==============================-->
+        <include
+            android:id="@+id/layout_additional_translation"
+            layout="@layout/layout_additional_translation"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="@+id/ifv_list_additional_translation"
+            app:layout_constraintEnd_toEndOf="@+id/ifv_list_additional_translation"
+            app:layout_constraintStart_toStartOf="@+id/ifv_list_additional_translation"
+            app:layout_constraintTop_toTopOf="@+id/ifv_list_additional_translation" />
+
     </androidx.constraintlayout.motion.widget.MotionLayout>
 </layout>
